--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
         // 자기 자신을 뽑지 않을 때까지 섞기 (최대 100번 시도)
         while (!success && attempts < 100) {
             attempts++;
-            receiver.sort(() => Math.random() - 0.5);
-
+            // 피셔-예이츠 셔플 알고리즘 적용
+            for (let i = receiver.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [receiver[i], receiver[j]] = [receiver[j], receiver[i]]; // 요소 스왑
+            }
             success = giver.every((name, index) => name !== receiver[index]);
         }
 
